Table : Avatar add min-width to fix issue on ie11

--- a/src/alto-ui/Table/Table.scss
+++ b/src/alto-ui/Table/Table.scss
@@ -91,6 +91,11 @@
       box-shadow: unset;
     }
   }
+
+  // Added to fix issue on ie11
+  &--avatar {
+    min-width: 12rem;
+  }
 }
 
 .Table__cell--editable {
